--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,5 +1,5 @@
 ﻿/*General colors*/
-$color-grey-very-light: #e1e4ea;
+$color-grey-very-light: #3266ce;
 $color-grey-super-light: #f4f6fc;
 $color-grey-super-ultra-light: #f9fbff;
 $color-grey-light: #9ea8bb;
@@ -13,7 +13,7 @@ $color-red-very-light: #ffe8e8;
 $color-red-light: #ffb5b5;
 $color-red-normal: #ff6868;
 $color-yellow-very-light: #fffae6;
-$color-yellow-light: #ffefad;
+$color-yellow-light: #5b7553;
 $color-yellow-normal: #ffcf11;
 $color-green-very-light: #e8f9f7;
 $color-green-light: #b5ece5;
