--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -5,7 +5,7 @@ $color-grey-super-ultra-light: #f9fbff;
 $color-grey-light: #9ea8bb;
 $color-grey-normal: #001c54;
 $color-blue-ultra-light: #f5f8fd;
-$color-blue-very-light: #eaf0fd;
+$color-blue-very-light: #ecfdea41;
 $color-blue-light: #d2e0ff;
 $color-blue-mid: #ccd7f1;
 $color-blue-normal: #1b6bf8;
